[project]
name = "lab2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "einops>=0.8.2",
    "jaxtyping>=0.3.9",
    "matplotlib>=3.10.8",
    "torch>=2.10.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
